# zero-to-graphql-using-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
config/: database.yml
db/: 20160730024335_create_friendships.sql
db/migrations/: 20160730004705_create_people.sql
src/: db.rs  graphql.rs  lib.rs  main.rs
tests/: graphql_tests.rs
